[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
uuid = { version = "^0.8", features = ["v4"] }
rand = "0.8"
chrono = "*"
fake = "2.4"
tokio = { version = "1", features = ["full"] }