[package]
name = "dynamodb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.0"
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.4.0"

