[package]
name = "fibonacci-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
num-bigint = "0.4"
lambda_http = "0.8"
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

